# clap_ambient

./: .focus-config  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  tester.maxpat
Source/: config.h  main.odin  plugin_entry.c  plugin_entry.cpp
experiments/: implot_test.odin  paulstretch.jl
libs/implot-v1.0/: implot.odin
libs/odin-imgui/: README.md  build.py  enabled.odin  imgui.odin  imgui_internal.odin
